# third_party_skia

./: .gn  0001-skia-update.patch  1.diff  1.patch  2.diff  BUILD.gn  OAT.xml  README.OpenSource  a.diff  bundle.json
auto_build/: add_skia_dm_test.sh  add_skia_dm_test_RK3568.sh  build_libskia.sh  modify_file_to_build_libskia.sh
build_overrides/: angle.gni  dawn.gni  skia.gni  spirv_tools.gni  tint.gni
dm/: DM.cpp  DMSrcSink.cpp
experimental/skrive/: BUILD.gn
experimental/sktext/: BUILD.gn
gm/: pathfill.cpp
gn/: BUILDCONFIG.gn  core.gni  find_headers.py  flutter_defines.gni  gpu.gni  ios.gni  oh_skia.gni  platform.gni  skia.gni  sksl.gni
gn/skia/: BUILD.gn
gn/toolchain/: BUILD.gn
include/codec/: SkCodec.h
include/config/: SkUserConfig.h
include/core/: HMSymbol.h  SkBlurTypes.h  SkCanvas.h  SkColor.h  SkColorFilter.h  SkColorSpace.h  SkData.h  SkFontMgr.h  SkGraphics.h  SkHMSymbol.h  SkICC.h  SkImage.h  SkImageInfo.h  SkLog.h  SkM44.h  SkMatrix.h  SkPath.h  SkPoint.h  SkPoint3.h  SkRRect.h  SkRect.h  SkRegion.h  SkScalar.h  SkStringView.h  SkSurface.h  SkTextBlob.h  SkTypeface.h  SkTypes.h  SkVertices.h
include/effects/: SkRuntimeEffect.h
include/encode/: SkPngEncoder.h
include/gpu/: GrConfig.h  GrContextOptions.h  GrDirectContext.h  GrRecordingContext.h
include/private/: GrContext_Base.h  GrSingleOwner.h  GrTypesPriv.h  SkFloatBits.h  SkFloatingPoint.h  SkOnce.h  SkSLIRNode.h  SkSLLayout.h  SkSLModifiers.h  SkSLSampleUsage.h  SkSLString.h  SkTArray.h  SkTemplates.h  SkVx.h
include/sksl/: DSLLayout.h  DSLModifiers.h  DSLType.h
include/utils/: SkBase64.h  SkCamera.h  SkNWayCanvas.h  SkNoDrawCanvas.h  SkPaintFilterCanvas.h  SkShadowUtils.h
m133/: .gn  BUILD.gn
m133/bench/: nanobench.cpp
m133/build_overrides/: partition_alloc.gni
m133/gm/: bc1_transparency.cpp  compressed_textures.cpp  exoticformats.cpp  pathfill.cpp
m133/gn/: BUILDCONFIG.gn  core.gni  find_headers.py  gm.gni  gpu.gni  oh_skia.gni  opts.gni  platform.gni  ports.gni  shared_sources.gni  skia.gni  tests.gni  xml.gni
m133/gn/skia/: BUILD.gn
m133/gn/toolchain/: BUILD.gn
m133/modules/bentleyottmann/: BUILD.gn
m133/modules/sksg/: BUILD.gn
m133/modules/skshaper/: BUILD.gn
m133/modules/skshaper/include/: SkShaper.h  SkShaper_harfbuzz.h  SkShaper_skunicode.h
m133/modules/skshaper/src/: SkShaper.cpp  SkShaper_harfbuzz.cpp  SkShaper_primitive.cpp
m133/modules/svg/: BUILD.gn  svg.gni
m133/modules/svg/include/: CssStyleParser.h  SkSVGContainer.h  SkSVGDOM.h  SkSVGNode.h  SkSVGRenderContext.h  SkSVGText.h
m133/modules/svg/src/: SkSVGContainer.cpp  SkSVGDOM.cpp  SkSVGRenderContext.cpp  SkSVGSVG.cpp  SkSVGText.cpp  SkSVGXMLDOM.cpp
m133/src/gpu/vk/vulkanmemoryallocator/: BUILD.gn  VulkanAMDMemoryAllocator.cpp  VulkanAMDMemoryAllocator.h  VulkanMemoryAllocatorPriv.h  VulkanMemoryAllocatorWrapper.cpp
m133/tests/: DrawOpAtlasTest.cpp  EncodeTest.cpp  GrMemoryPoolTest.cpp  TextBlobCacheTest.cpp
m133/tools/: SkSharingProc.cpp
modules/canvaskit/: package-lock.json  paragraph.js
modules/particles/: BUILD.gn
modules/pathkit/: package-lock.json
modules/skottie/: BUILD.gn
modules/skparagraph/: BUILD.gn  skparagraph.gni
modules/skparagraph/include/: DartTypes.h  FontArguments.h  FontCollection.h  HyphenTrie.h  Hyphenator.h  Metrics.h  Paragraph.h  ParagraphBuilder.h  ParagraphCache.h  ParagraphLineFetcher.h  ParagraphPainter.h  ParagraphStyle.h  RunBase.h  SkTextBundleConfigParser.h  TextGlobalConfig.h  TextLineBase.h  TextStyle.h  TypefaceFontProvider.h  drawing.h
modules/skparagraph/src/: Decorations.cpp  Decorations.h  FontArguments.cpp  FontCollection.cpp  HyphenTrie.cpp  Hyphenator.cpp  OneLineShaper.cpp  OneLineShaper.h  ParagraphBuilderImpl.cpp  ParagraphBuilderImpl.h  ParagraphCache.cpp  ParagraphImpl.cpp  ParagraphImpl.h  ParagraphLineFetcherImpl.cpp  ParagraphLineFetcherImpl.h  ParagraphPainterImpl.cpp  ParagraphPainterImpl.h  ParagraphStyle.cpp  Run.cpp  Run.h  RunBaseImpl.cpp  RunBaseImpl.h  SkTextBundleConfigParser.cpp  TextGlobalConfig.cpp  TextLine.cpp  TextLine.h  TextLine.h.rej  TextLineBaseImpl.cpp  TextLineBaseImpl.h  TextLineJustify.cpp  TextLineJustify.h  TextParameter.h  TextStyle.cpp  TextTabAlign.cpp  TextTabAlign.h  TextWrapper.cpp  TextWrapper.h  TypefaceFontProvider.cpp  log.h  trace.h
modules/skparagraph/utils/: hyphen_pattern.h  hyphen_pattern_processor.cpp  hyphen_pattern_reader.cpp  pattern_processor.cpp  pattern_reader.cpp
modules/skplaintexteditor/: BUILD.gn
modules/skresources/: BUILD.gn
modules/sksg/: BUILD.gn
modules/skshaper/: BUILD.gn
modules/skunicode/: BUILD.gn
modules/svg/: BUILD.gn  svg.gni
modules/svg/include/: CssStyleParser.h  SkSVGContainer.h  SkSVGDOM.h  SkSVGNode.h  SkSVGRenderContext.h  SkSVGText.h  SkSVGXMLDOM.h
modules/svg/src/: CssStyleParser.cpp  SkSVGContainer.cpp  SkSVGDOM.cpp  SkSVGImage.cpp  SkSVGRenderContext.cpp  SkSVGSVG.cpp  SkSVGText.cpp  SkSVGXMLDOM.cpp
src/codec/: SkBmpStandardCodec.cpp  SkCodec.cpp  SkHeifCodec.cpp  SkHeifCodec.h  SkIcoCodec.cpp  SkJpegCodec.cpp  SkJpegCodec.h  SkJpegUtility.cpp  SkJpegUtility.h  SkPngCodec.cpp  SkSampler.h  SkStubHeifDecoderAPI.h
src/core/: SkATrace.cpp  SkArenaAlloc.h  SkAutoPixmapStorage.h  SkBitmapDevice.h  SkBlurMF.cpp  SkBlurMask.h  SkCanvas.cpp  SkClipStackDevice.h  SkColorFilter_Matrix.cpp  SkColorFilter_Matrix.h  SkColorSpace.cpp  SkCompressedDataUtils.cpp  SkCompressedDataUtils.h  SkData.cpp  SkDevice.h  SkDistanceFieldGen.cpp  SkDraw.h  SkDrawShadowInfo.cpp  SkDrawShadowInfo.h  SkEdgeClipper.cpp  SkFontDescriptor.h  (+54 more)
tests/: CanvasStateHelpers.h  CodecAnimTest.cpp  CodecTest.cpp  ColorSpaceTest.cpp  DrawOpAtlasTest.cpp  EncodedInfoTest.cpp  ExifTest.cpp  FontHostStreamTest.cpp  GrFinishedFlushTest.cpp  ImageFilterTest.cpp  ImageIsOpaqueTest.cpp  ImageTest.cpp  MipMapTest.cpp  ParsePathTest.cpp  SamplingTest.cpp  SerialProcsTest.cpp  SerializationTest.cpp  ShadowTest.cpp  SkRemoteGlyphCacheTest.cpp  Test.cpp  TextBlobCacheTest.cpp  TraceMemoryDumpTest.cpp  TypefaceTest.cpp  VerticesTest.cpp
tools/: CrashHandler.cpp  SkSharingProc.cpp
(+699 files in other folders)
