# Copyright 2020 Google LLC.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

spirv_tools_standalone = false

spirv_tools_googletest_dir = "${skia_third_party_dir}/googletest/src"
spirv_tools_spirv_headers_dir = "${skia_third_party_dir}/externals/spirv-headers"
