# Copyright 2019 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# These are variables that are overridable by projects that include Tint.

tint_root_dir = "${skia_third_party_dir}/externals/tint"
tint_spirv_tools_dir = "${skia_third_party_dir}/externals/spirv-tools"
tint_spirv_headers_dir = "${skia_third_party_dir}/externals/spirv-headers"

tint_build_spv_reader = true
tint_build_spv_writer = true
tint_build_wgsl_reader = true
tint_build_wgsl_writer = true
